fixed flex spacing for project images -- renamed from work

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,6 @@
   --plum: #b1a5a5;
   --black: #000000;
   --dutsty: #666166;
-  --white: #FFFFFF;
 
 }
 
@@ -23,7 +22,8 @@ body {
 /* HEADER / NAV BAR STYLES START */
 
 header {
-  display: inline-block;
+  display: inl;
+  flex-wrap: wrap;
   margin: 0;
   padding: 20px 35px;
   background-color: var(--plum);
@@ -31,15 +31,15 @@ header {
 }
 
 h1 {
-  display: inline-block;
+  display: flex;
   justify-content: justify;
   align-content: center;
   font-weight: bold;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   font-size: 5.55vw;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  text-align: left;
+  text-align: center;
   color:var(--plum);
 }
 
@@ -88,14 +88,13 @@ nav ul {
   justify-content: space-around;
   align-items: center;
   list-style: none;
-  position: sticky;
 }
 
-/*END -- HEADER / NAV STYLE SECTION*/
+/*  END -- HEADER / NAV STYLE SECTION */
 
-/*HERO SECTION*/
+/*  BANNER SECTION */
 
-.hero img {
+.banner img {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -106,65 +105,88 @@ nav ul {
   max-height: 200px;
   }
   
-/*END -- HERO SECTION*/
+/*  END -- BANNER SECTION*/
 
-/*CONTENT SECTION*/
+/*  ABOUT ME SECTION*/
 
-.content div {
+/*.content div {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
   margin-bottom: 5px;
   padding-top: 50px;
   justify-content: left;
-  align-items: left;
-}
+}*/
 
-.sidebar {
-  display: flex;
-  flex-direction: column;
-  font-size: 2vw;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  align-content: left;
-}
-
-.text-right {
+h2 {
   display: flex;
   flex-wrap: wrap;
-  position: relative;
-  padding-left: 100px;
-  font-size: 1.55vw;
+  flex-direction: row;
+  font-size: 3vw;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  text-align: justify;
+  align-content: left;
+  margin-top: 25px;
 }
 
+.vertical-line {
+  position: relative;
+  padding-right: 100px;
+  border-left: 5px solid var(--dutsty);
+  height: 200px;
+}
+
+p {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 20px;
+  font-size: 1.55vw;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-align: left;
+}
+
+
+/*  WORK SECTION */
+
 .big img {
+  flex-basis: 77%;
   width: 100%;
   border: 3px solid var(--dutsty);
 }
 
 .small img {
-  clear: both;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  align-items: flex-end;
   justify-content: space-between;
-  flex: 1;
-  width: 25%;
-  padding: 25px;
+  padding: 0;
+  width: 33%;
+  border: 3px solid var(--dutsty);
 }
 
+/*  END WORK SECTION */
+
+/*  CONTACT SECTION */
+
+.flex-item ul li {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: right;
+  align-items: flex-end;
+  list-style: none;
+  padding-left: 100px;
+}
+
+/*  END CONTACT SECTION */
 
 /*END CONTENT SECTION*/
 
 
-
 /*FOOTER*/
-.footer h2{
+.footer h3{
   font-weight: lighter;
-  font-size: smaller;
-  font-family: sans-serif;
-  font-style: var(--tertiary-color);
+  font-size: 1vw;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: var(--plum);
   display: flex;
   flex-wrap: wrap;
   align-content: center;
